tests/ui/fail_invalid_threshold.stderr
error: Threshold must end with 'ms', 'us', 'ns', or 's'
 --> tests/ui/fail_invalid_threshold.rs:4:1
  |
4 | #[measure_time(threshold = "invalid")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `measure_time` (in Nightly builds, run with -Z macro-backtrace for more info)
